# videomancer-sdk

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build_programs.sh
.github/: copilot-instructions.md
docs/: abi-format.md  ai-program-generation-guide.md  bitstream-compression-plan.md  bitstream-compression.md  existing-programs-catalog.md  original-program-ideas.md  package-signing-guide.md  program-categories.md  program-development-guide.md  toml-config-guide.md  vmprog-format.md
docs/schemas/: vmprog_program_config_schema_v1_0.json
examples/templates/: template.toml
fpga/: Makefile
keys/: README.md
programs/chromakey/: chromakey.vhd
programs/colorbars/: .lzx-status.toml  colorbars.toml  colorbars.vhd  video_timing_generator_fielded.vhd
programs/howler/: .lzx-status.toml  howler.toml  howler.vhd
programs/kintsugi/: .lzx-status.toml  kintsugi.toml  kintsugi.vhd
programs/mycelium/: .lzx-status.toml  mycelium.toml  mycelium.vhd
scripts/: setup.sh
tests/: COVERAGE.md  README.md
tools/vhdl-image-tester/: .gitignore  README.md  pyproject.toml  run.bat  run.py  run.sh
tools/vhdl-image-tester/vhdl_image_tester/: __init__.py  __main__.py  cli.py
tools/vhdl-image-tester/vhdl_image_tester/app/: __init__.py  app.py  main_window.py
tools/vhdl-image-tester/vhdl_image_tester/app/widgets/: __init__.py  combo_fix.py  image_viewer.py  log_panel.py  program_panel.py  register_panel.py
tools/vhdl-image-tester/vhdl_image_tester/core/: __init__.py  config.py  image_converter.py  pipeline.py  program_loader.py  sim_runner.py  testbench_gen.py
(+1177 files in other folders)
